# brkfix

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Trilinos  aalloc.c  aalloc.h  acconfig.h  bbb.c  bbb.h  brk.c  brkfix_types.h  cmake-config  config.h  dpi.h  eh.c  eh.h  emuck.c  emuck.h  exo_conn.c  exo_conn.h  exo_struct.h  exo_utils.c  exo_utils.h  fix.c  map_names.h  mk_dm.c  mk_dm.h  nodesc.h  ppi.c  ppi.h  rd_dpi.c  rd_dpi.h  rd_exo.c  rd_exo.h  rd_in.c  rd_in.h  sam_perea.c  sam_perea.h  std.h  utils.c  (+7 more)
